--- a/doc/ForkliftDataCollection/图片上传.md
+++ b/doc/ForkliftDataCollection/图片上传.md
@@ -12,13 +12,30 @@ graph LR
 
 ## 服务端
 
+### 获取信息
 
+- 叉车编号
+- 照片时间
+- 照片数据与文件名
+
+### 文件保存位置
+
+- 文件保存至静态网页能够访问的位置，并记录地址：http://地址/pic/叉车编号/文件名
+- 如：http://127.0.0.1:8080/pic/C01/C01_1621264092.Jpeg
+
+### 数据库写入
+
+- 数据库写入
+- SQL语句：INSERT INTO `car_pic_C01` (`time`, `physicalpath`, `webpath`) VALUES ('时间', '文件地址', '文件网页访问地址');
 
 ## 客户端
 
-http://127.0.0.1:8080/C01/C01_1621264089.Jpeg
+
+
 ### 照片命名规则
 
 - 叉车编号 + _ + 日期时间（精确到秒）+ .Jpeg
   - 示例：C01_1621262524.Jpeg
+  
+    
 
